--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -93,7 +93,8 @@ body {
 
 .customPagination > li > a {
 	color: #5f5f5f;
-  background-color: #121212!important;
+  background-color: #121212 !important;
+	box-shadow: none !important;
 	border-color: #1c1c1c;
 }
 .customPagination {
@@ -135,9 +136,9 @@ body {
 	border: none;
 }
 
-/* Buttons ---------------------------------------------------------------------------------------------------- */
+/* Feed posts ---------------------------------------------------------------------------------------------------- */
 
-.post {
+.feed {
 	background-color: #121212;
 	color: #b7b7b7;
 	border: none;
