--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -63,9 +63,11 @@ body {
 ::-moz-selection {
 	background: #1f1f1f;
 }
+
 ::-webkit-selection {
 	background: #1f1f1f;
 }
+
 ::selection {
 	background: #1f1f1f;
 }
@@ -73,7 +75,7 @@ body {
 /* Link color. ---------------------------------------------------------------------------------------------------- */
 
 .link {
-	color: #5f5f5f !important;
+	color: #2d2d2d !important;
 }
 
 .link:hover {
@@ -82,7 +84,7 @@ body {
 }
 
 .half-rule {
-	border-color: #1c1c1c;
+	border-color: #121212;
 }
 
 .tab-space {
@@ -92,20 +94,16 @@ body {
 /* Pagination configuration. ---------------------------------------------------------------------------------------------------- */
 
 .customPagination > li > a {
-	color: #5f5f5f;
+	color: #2d2d2d;
   background-color: #121212 !important;
 	box-shadow: none !important;
-	border-color: #1c1c1c;
-}
-.customPagination {
-  color: #5f5f5f;
-	border-color: #1c1c1c;
+	border-color: #121212;
 }
 .customPagination > li.active > a,
 .customPagination > li > a:hover
 {
 	color: #b7b7b7;
-	border-color: #1c1c1c;
+	border-color: #121212;
 }
 
 /* Login form ---------------------------------------------------------------------------------------------------- */
@@ -142,4 +140,10 @@ body {
 	background-color: #121212;
 	color: #b7b7b7;
 	border: none;
+}
+
+/* Feed posts ---------------------------------------------------------------------------------------------------- */
+
+.darkish {
+	color: "#2d2d2d";
 }
