--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -5,9 +5,8 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background: #0f0f0f;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	background: #0c0c0c;
 	color: #b7b7b7;
 }
 
@@ -36,11 +35,11 @@ body {
 /* Link color. ---------------------------------------------------------------------------------------------------- */
 
 .link {
-	color: #2b2b2b !important;
+	color: #2b2b2b;
 }
 
 .link:hover {
-	color: #b7b7b7 !important;
+	color: #b7b7b7;
 	text-decoration: none;
 }
 
@@ -52,41 +51,60 @@ body {
 
 .customPagination > li > a {
 	color: #2d2d2d;
-  background-color: #111111 !important;
+  background-color: #0f0f0f !important;
 	box-shadow: none !important;
-	border-color: #111111;
+	border-color: #0f0f0f;
 }
 .customPagination > li.active > a,
 .customPagination > li > a:hover
 {
 	color: #b7b7b7;
-	border-color: #111111;
+	border-color: #0f0f0f;
 }
 
 /* Login form ---------------------------------------------------------------------------------------------------- */
 
 .login, .login:focus {
-	background-color: #111111;
+	background-color: #0f0f0f;
 	color: #b7b7b7;
 	box-shadow: none !important;
 	border: none;
 	width: 40%;
 }
 
+/* Header text ---------------------------------------------------------------------------------------------------- */
+
+.text-header {
+	text-align: center;
+	font-size: 80px;
+	text-decoration: none !important;
+	color: #b7b7b7 !important;
+}
+
+/* Menu ---------------------------------------------------------------------------------------------------- */
+
+.menu {
+	color: #b7b7b7 !important;
+}
+
+.menu-lines {
+	border-top: thin solid #111111 !important;
+	border-bottom: thin solid #111111 !important;
+}
+
+/* Back home ---------------------------------------------------------------------------------------------------- */
+
+.back-to-home {
+	color: #b7b7b7 !important;
+	/* font-weight: bold; */
+	text-decoration: none !important;
+}
+
 /* Textarea ---------------------------------------------------------------------------------------------------- */
 
 .textarea, .textarea:focus {
-	background-color: #111111;
+	background-color: #0e0e0e;
 	color: #b7b7b7;
-	box-shadow:none !important;
-	border: none;
-}
-
-/* Buttons ---------------------------------------------------------------------------------------------------- */
-
-.btn {
-	background-color: #111111 !important;
-	color: #b7b7b7 !important;
 	box-shadow:none !important;
 	border: none;
 }
@@ -94,34 +112,26 @@ body {
 /* Feed posts ---------------------------------------------------------------------------------------------------- */
 
 .feed {
-	background-color: #111111;
+	background-color: #0e0e0e;
 	color: #b7b7b7;
 	border: none;
 }
 
-/* Feed posts ---------------------------------------------------------------------------------------------------- */
+/* Buttons ---------------------------------------------------------------------------------------------------- */
 
-.darkish {
-	color: "#2d2d2d";
+.btn {
+	background-color: #0f0f0f !important;
+	color: #b7b7b7 !important;
+	box-shadow:none !important;
+	border: none;
 }
 
-/* Lines ---------------------------------------------------------------------------------------------------- */
-
-.top-and-bottom-lines {
-	border-bottom: thin solid #111111 !important;
-	border-top: thin solid #111111 !important;
-}
+/* Break lines ---------------------------------------------------------------------------------------------------- */
 
 .h-line {
 	border-top: thin solid #111111 !important;
 }
 
-.bottom-line {
+.h-line-bottom {
 	border-bottom: thin solid #111111 !important;
-}
-
-.vertical-lines {
-  border-left: thin solid #111111;
-	border-right: thin solid #111111;
-	/* background-color: #111111; */
 }
