--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -35,7 +35,7 @@ body {
 /* Link color. ---------------------------------------------------------------------------------------------------- */
 
 .link {
-	color: #2b2b2b;
+	color: #787878;
 }
 
 .link:hover {
@@ -50,7 +50,7 @@ body {
 /* Pagination configuration. ---------------------------------------------------------------------------------------------------- */
 
 .customPagination > li > a {
-	color: #2d2d2d;
+	color: #787878;
   background-color: #0f0f0f !important;
 	box-shadow: none !important;
 	border-color: #0f0f0f;
