--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -51,21 +51,21 @@ body {
 
 .customPagination > li > a {
 	color: #5f5f5f;
-  background-color: #0f0f0f !important;
+  background-color: #0e0e0e !important;
 	box-shadow: none !important;
-	border-color: #0f0f0f;
+	border-color: #0e0e0e;
 }
 .customPagination > li.active > a,
 .customPagination > li > a:hover
 {
 	color: #b7b7b7;
-	border-color: #0f0f0f;
+	border-color: #0e0e0e;
 }
 
 /* Login form ---------------------------------------------------------------------------------------------------- */
 
 .login, .login:focus {
-	background-color: #0f0f0f;
+	background-color: #0e0e0e;
 	color: #b7b7b7;
 	box-shadow: none !important;
 	border: none;
@@ -135,13 +135,6 @@ body {
 /* Buttons ---------------------------------------------------------------------------------------------------- */
 
 .btn {
-	background-color: #0f0f0f !important;
-	color: #b7b7b7 !important;
-	box-shadow:none !important;
-	border: none;
-}
-
-.btn:hover {
 	background-color: #0e0e0e !important;
 	color: #b7b7b7 !important;
 	box-shadow:none !important;
