--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -35,17 +35,22 @@ body {
 /* Scroll bar. ---------------------------------------------------------------------------------------------------- */
 
 ::-webkit-scrollbar {
-  width: 10px;
+	width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #0c0c0c; 
+	background: #0c0c0c; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #0e0e0e; 
+	background: #0e0e0e; 
+}
+
+/* Bottom right square of the scroll bar */
+::-webkit-scrollbar-corner {
+	background: #0e0e0e;
 }
 
 /* Link color. ---------------------------------------------------------------------------------------------------- */
@@ -67,7 +72,7 @@ body {
 
 .customPagination > li > a {
 	color: #5f5f5f;
-  background-color: #0e0e0e !important;
+	background-color: #0e0e0e !important;
 	box-shadow: none !important;
 	border-color: #0e0e0e;
 }
